--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8" /> 
-  <script type="text/javascript" src="out.js"></script>
+  <script type="text/javascript" src="deploy/bundle.js"></script>
 </head>
 <body>
   
